--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.8.1
+boto3==1.34.115
+botocore==1.34.115
+certifi==2024.2.2
+charset-normalizer==3.3.2
 cloudinary==1.39.1
 coverage==7.4.4
+cryptography==40.0.0
 dj-database-url==2.1.0
 dj-rest-auth==6.0.0
 dj3-cloudinary-storage==0.0.6
@@ -9,11 +14,22 @@ django-allauth==0.63.2
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.3.1
 django-filter==24.2
+django-rest-passwordreset==1.3.0
+django-storages==1.14.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 gunicorn==21.2.0
+idna==3.7
+jmespath==1.0.1
+packaging==24.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+requests==2.32.3
+s3transfer==0.10.1
+six==1.16.0
 sqlparse==0.5.0
 tzdata==2024.1
+typing_extensions==4.12.0
+urllib3==2.2.1
