--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ asgiref==3.8.1
 boto3==1.34.115
 botocore==1.34.115
 certifi==2024.2.2
+cffi==1.16.0
+channels==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
 cloudinary==1.39.1
 coverage==7.4.4
@@ -18,14 +21,19 @@ django-rest-passwordreset==1.3.0
 django-storages==1.14.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+daphne==4.1.2
 gunicorn==22.0.0
 idna==3.7
 jmespath==1.0.1
+msgpack==1.0.8
 packaging==24.0
+pillow==10.3.0
 psycopg2-binary==2.9.9
+pycparser==2.22
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+redis==5.0.5
 requests==2.32.3
 s3transfer==0.10.1
 six==1.16.0
