--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 asgiref==3.8.1
+async-timeout==4.0.3
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
 boto3==1.34.115
 botocore==1.34.115
 certifi==2024.2.2
 cffi==1.16.0
 channels==4.1.0
-channels-redis==4.2.0
 charset-normalizer==3.3.2
 cloudinary==1.39.1
+colorama==0.4.6
+constantly==23.10.4
 coverage==7.4.4
 cryptography==41.0.0
+daphne==4.1.2
 dj-database-url==2.1.0
-dj-rest-auth==6.0.0
 dj3-cloudinary-storage==0.0.6
 Django==5.0.6
-django-allauth==0.63.2
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.3.1
 django-filter==24.2
@@ -21,23 +25,37 @@ django-rest-passwordreset==1.3.0
 django-storages==1.14.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
-daphne==4.1.2
 gunicorn==22.0.0
+hyperlink==21.0.0
 idna==3.7
+incremental==22.10.0
+iniconfig==2.0.0
 jmespath==1.0.1
 msgpack==1.0.8
 packaging==24.0
 pillow==10.3.0
+pluggy==1.5.0
 psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 PyJWT==2.8.0
+pyOpenSSL==23.2.0
+pytest==8.2.2
+pytest-asyncio==0.23.7
+pytest-django==4.8.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
-redis==5.0.5
 requests==2.32.3
 s3transfer==0.10.1
+service-identity==24.1.0
+setuptools==70.0.0
 six==1.16.0
 sqlparse==0.5.0
-tzdata==2024.1
+Twisted==24.3.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
 typing_extensions==4.12.0
+tzdata==2024.1
 urllib3==2.2.1
+zope.interface==6.4.post2
