--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*.pyc
-*.pyo
 
 # C extensions
 *.so
@@ -29,8 +27,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-# Usually these files are written by a python script from a template
-# before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -52,6 +48,9 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+test_results/
+junitxml/
+.junit/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -105,7 +104,6 @@ cython_debug/
 *.log
 local_settings.py
 db.sqlite3
-/db.sqlite3
 /staticfiles/
 /media/
 
@@ -122,62 +120,33 @@ docs/_build/
 # PyBuilder
 target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
 # IPython
 profile_default/
 ipython_config.py
 
-# pyenv
-.python-version
-
-#Pipfile.lock
-
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
 
 # django-pyodbc
 *sql_server.py
 
 # VS Code
 .vscode/
+
+# Email templates
+.email 
+email 
+/email/
+
+# Test results
+test_results/
+junitxml/
+.junit/
+pytest.ini
+
+# Other local config files
+*.local
+*.config
+
+# Pipfile.lock
+Pipfile.lock
