--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
 asgiref==3.8.1
 attrs==23.2.0
 certifi==2024.6.2
-cffi==1.16.0
 charset-normalizer==3.3.2
-cloudinary==1.39.1
-colorama==0.4.6
-cryptography==41.0.0
+cloudinary==1.40.0
 dj-database-url==2.1.0
-dj3-cloudinary-storage==0.0.6
 Django==5.0.6
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.3.1
@@ -17,19 +13,18 @@ django-storages==1.14.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 gunicorn==22.0.0
-h11==0.14.0
 idna==3.7
 openai==0.28.0
+packaging==24.1
 pillow==10.3.0
-psycopg==3.1.19
 psycopg2-binary==2.9.9
-pydantic==2.7.4
-pydantic_core==2.18.4
 PyJWT==2.8.0
 python-decouple==3.8
 requests==2.32.3
-six==1.16.0
 sqlparse==0.5.0
 tqdm==4.66.4
+typing_extensions==4.12.2
 tzdata==2024.1
-urllib3==2.2.1
+urllib3==2.2.2
+whitenoise==6.1.0
+channels==3.0.3
